WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78963
[Qt][WK2] Accelerated animations don't work on Mac
https://bugs.webkit.org/show_bug.cgi?id=78963
Summary
[Qt][WK2] Accelerated animations don't work on Mac
Noam Rosenthal
Reported
2012-02-18 05:17:03 PST
[Qt][WK2] Accelerated animations don't work on Mac
Attachments
Patch
(4.44 KB, patch)
2012-02-20 12:51 PST
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2012-02-20 12:51:11 PST
Created
attachment 127842
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2012-02-21 12:51:54 PST
Comment on
attachment 127842
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=127842&action=review
> Source/WebKit2/UIProcess/qt/LayerTreeHostProxyQt.cpp:205 > + TextureMapperLayer* layer = toTextureMapperLayer(rootLayer()); > + ASSERT(layer);
Shouldn't that assert not be in toTextureMapperLayer ?
Noam Rosenthal
Comment 3
2012-02-21 13:32:43 PST
(In reply to
comment #2
)
> (From update of
attachment 127842
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=127842&action=review
> > > Source/WebKit2/UIProcess/qt/LayerTreeHostProxyQt.cpp:205 > > + TextureMapperLayer* layer = toTextureMapperLayer(rootLayer()); > > + ASSERT(layer); > > Shouldn't that assert not be in toTextureMapperLayer ?
No, sometimes it's ok to have NULL.
WebKit Review Bot
Comment 4
2012-02-21 14:57:42 PST
Comment on
attachment 127842
[details]
Patch Clearing flags on attachment: 127842 Committed
r108405
: <
http://trac.webkit.org/changeset/108405
>
WebKit Review Bot
Comment 5
2012-02-21 14:57:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug