[Qt][WK2] Accelerated animations don't work on Mac https://bugs.webkit.org/show_bug.cgi?id=78963

Problem came from using a non-RunLoop timer.
Remove the unused viewportUpdateTimer, and use the existing animationTimer instead.
Use a continuous timer that we only stop when animations stop.

Reviewed by Kenneth Rohde Christiansen.

* UIProcess/LayerTreeHostProxy.h:
(LayerTreeHostProxy):
* UIProcess/qt/LayerTreeHostProxyQt.cpp:
(WebKit::LayerTreeHostProxy::LayerTreeHostProxy):
(WebKit::LayerTreeHostProxy::paintToCurrentGLContext):
(WebKit):
(WebKit::LayerTreeHostProxy::syncAnimations):


Canonical link: https://commits.webkit.org/96209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108405 268f45cc-cd09-0410-ab3c-d52691b4dbfc